--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -34,6 +34,18 @@
 						<td class="info-altura" id="altura-2">2.00</td>
 						<td class="info-imc" id="imc-2"></td>
 					</tr>
+					<tr class="paciente">
+						<td class="info-nome">Stuart</td>
+						<td class="info-peso" id="peso-2">120</td>
+						<td class="info-altura" id="altura-2">1.80</td>
+						<td class="info-imc" id="imc-2"></td>
+					</tr>
+					<tr class="paciente">
+						<td class="info-nome">Rafael</td>
+						<td class="info-peso" id="peso-2">110</td>
+						<td class="info-altura" id="altura-2">1.60</td>
+						<td class="info-imc" id="imc-2"></td>
+					</tr>
 				</table>
 				<button id="calcula-imcs" class="botao ">Calcular Imcs</button>
 			</section>
