Teste, alterei o index

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -24,33 +24,33 @@
 					</tr>
 					<tr class="paciente">
 						<td class="info-nome">Leonardo</td>
-						<td class="info-peso" id="peso-1">57</td>
-						<td class="info-altura" id="altura-1">1.67</td>
-						<td class="info-imc" id="imc-1"></td>
+						<td class="info-peso">57</td>
+						<td class="info-altura">1.67</td>
+						<td class="info-imc"></td>
 					</tr>
 					<tr class="paciente">
 						<td class="info-nome">Paulo</td>
-						<td class="info-peso" id="peso-2">100</td>
-						<td class="info-altura" id="altura-2">2.00</td>
-						<td class="info-imc" id="imc-2"></td>
+						<td class="info-peso">100</td>
+						<td class="info-altura">2.00</td>
+						<td class="info-imc"></td>
 					</tr>
 					<tr class="paciente">
 						<td class="info-nome">Stuart</td>
-						<td class="info-peso" id="peso-2">120</td>
-						<td class="info-altura" id="altura-2">1.80</td>
-						<td class="info-imc" id="imc-2"></td>
+						<td class="info-peso">120</td>
+						<td class="info-altura">1.80</td>
+						<td class="info-imc"></td>
 					</tr>
 					<tr class="paciente">
 						<td class="info-nome">Rafael</td>
-						<td class="info-peso" id="peso-2">110</td>
-						<td class="info-altura" id="altura-2">1.60</td>
-						<td class="info-imc" id="imc-2"></td>
+						<td class="info-peso">110</td>
+						<td class="info-altura">1.60</td>
+						<td class="info-imc"></td>
 					</tr>
 				</table>
-				<button id="calcula-imcs" class="botao ">Calcular Imcs</button>
+				<button id="calcula-imcs" class="botao" class="botao ">Calcular Imcs</button>
 			</section>
 			<section>
-				<h2>Adicionar novo paciente</h2>	
+				<h2>Adicionar novo paciente</h2>
 				<form>
 					<fieldset>
 						<label for="nome">Nome:</label>
@@ -68,28 +68,8 @@
 				</form>
 			</section>
 		</main>
-		<script src="calcula-imc.js"></script>
+		<script src="precorre.js"></script>
+        <script src="calcula-imc.js"></script>
+        <script src="imprime-nome.js"></script>
 	</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
