adicionando o comportamento funcional nos botoes

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -71,5 +71,6 @@
 		<script src="precorre.js"></script>
         <script src="calcula-imc.js"></script>
         <script src="imprime-nome.js"></script>
+				<script src="adiciona-usuario.js"></script>
 	</body>
 </html>
